# luajit-src-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  luajit_relver.txt  update.sh
.cargo/: config
.github/workflows/: main.yml
extras/: msvcbuild.bat
src/: lib.rs
testcrate/: Cargo.toml  build.rs
testcrate/src/: lib.rs
