[package]
name = "luajit-src"
version = "210.5.7+d06beb0"
authors = ["Aleksandr Orlenko <zxteam@protonmail.com>"]
edition = "2021"
repository = "https://github.com/khvzak/luajit-src-rs"
keywords = ["lua", "luajit"]
readme = "README.md"
license = "MIT"
description = """
Sources of LuaJIT 2.1 and logic to build it.
"""
exclude = ["/luajit2/doc", "/luajit2/etc"]

[dependencies]
cc = "1.0"
which = "6.0"
